chore: refactor backpacks files